--- a/testDeployment.yaml
+++ b/testDeployment.yaml
@@ -1,15 +1,16 @@
-kind: Deployment # Collection of pods
 apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: nginx-deployment
 spec:
-  replicas: 5 
+  replicas: 5
+  selector:
     matchLabels:
-      app: nginx-app 
+      app: nginx-app
   template:
     metadata:
       labels:
-        app: nginx-app 
+        app: nginx-app
     spec:
       containers:
       - name: nginx-container
